--- a/BankBranch/src/main/resources/templates/greeting.html
+++ b/BankBranch/src/main/resources/templates/greeting.html
@@ -45,6 +45,8 @@
     <label>Время работы: 8:00-18:00</label>
     <br>
     <label>Телефон: 12-345-67-89</label>
+    <br>
+    <label>В данный момент это оптимальное отделение</label>
 </div>
 <div class="parent" style="margin-top: 20px">
     <div id="map" class="map_window" style="width: 1024px; height: 768px;"></div>
